--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 
 {% if request.user.is_anonymous %}
 <div class="card__panel-head">
-    <h3>If you want to use the mini instagram function, please sign up or login first.</h3>
-    <h3>You can just use the guset account to login</h3>
+    <h3>Welcome to mini instagram, If you want to use the function please sign up or login first.</h3>
+    <h3>You can also use the guest account to login</h3>
     <p>username: test123</p><p>password: happyinstagram</p>
 </div>
 {% endif %}
